--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,115 @@
-Custom homepage
+<html>
+<head>
+	<!--Import Google Icon Font-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!--Import materialize.css-->
+	<!-- Compiled and minified CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+	<!-- Compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+
+	<!--Let browser know website is optimized for mobile-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+</head>
+<body>
+	<div class="container">
+		<h2>AI Birdwatcher Diary</h2>
+		<div class="row">
+			<div class="col s12 m8">
+				<div class="card">
+					<div class="center-align" style="background-color: rgb(240,240,240); width:100%; height:300px;padding-top:40px;">
+						<img src="images/empty-bird.png"/>
+					</div>
+					<div class="row" style="padding:10px;">
+						<form class="col s12" action="upload.php" method="post" enctype="multipart/form-data">
+							<!-- Upload Button -->
+							<div class="row">
+								<div class="col s12">
+									<div class="file-field input-field">
+										<div class="btn">
+											<span>Upload Image to Scan</span>
+											<input type="file">
+										</div>
+										<div class="file-path-wrapper">
+											<input class="file-path validate" type="text">
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- Scientific Name & Common Name Field -->
+							<div class="row">
+								<div class="col s6">
+									<input id="scientific_name" type="text" class="validate">
+									<label for="scientific_name">Scientific Name</label>
+								</div>
+								
+								<div class="col s6">
+									<input id="common_name" type="text" class="validate">
+									<label for="common_name">Common Name</label>
+								</div>
+							</div>
+
+							<!-- TIme & Location Field -->
+							<div class="row">
+								<div class="col s6">
+									<input id="b_time" type="text" class="validate">
+									<label for="b_time">Sighting Time</label>
+								</div>
+								
+								<div class="col s6">
+									<input id="b_location" type="text" class="validate">
+									<label for="b_location">Sighting Location</label>
+								</div>
+							</div>
+
+							<!-- Submit button -->
+							<div class="row"><div class="col s12">
+								<button class="waves-effect waves-light btn" type="file" name="fileToUpload" id="fileToUpload">
+									Submit
+									<i class="material-icons right">send</i>
+								</button>
+							</div></div>
+						</form>
+					</div>
+				</div>
+			</div>
+
+			<div class="col s12 m4">
+				<div class="card center-align grey-text text-darken-1 z-depth-0" style="background-color: rgb(240,240,240);padding:3px;">
+					<p>History</p>
+				</div>
+				<div class="card hoverable">
+					<div class="row">
+						<div class="col s8">
+							<div class ="truncate grey-text text-darken-1" style="padding-left:10px;padding-top: 14px;">
+								Sun Conure
+							</div>
+						</div>
+						<div class="col s4 right-align">
+							<img style ="max-width:50px;height:50px;margin:auto;" src="images/empty-bird.png"/>
+						</div>
+					</div>	
+				</div>
+				<div class="card hoverable">
+					<div class="row">
+						<div class="col s8">
+							<div class ="truncate grey-text text-darken-1" style="padding-left:10px;padding-top: 14px;">
+								African Grey Parrot
+							</div>
+						</div>
+						<div class="col s4 right-align">
+							<img style ="max-width:50px;height:50px;margin:auto;" src="images/empty-bird.png"/>
+						</div>
+					</div>	
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+</body>
+
+</html>
