--- a/www/index.html
+++ b/www/index.html
@@ -6,15 +6,17 @@
 	<!-- Compiled and minified CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
+	<!-- Import jQuery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 
 	<!--Let browser know website is optimized for mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-	<!-- Import jQuery -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	
+	<script src="js/materializedatetimepicker.js"></script>
 
 </head>
 <body>
@@ -92,9 +94,6 @@
 		</div>
 	</div>
 </div>
-  <!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
 <!-- Modal Structure -->
 <div id="modal1" class="modal">
 	<div class="modal-content">
@@ -197,6 +196,9 @@
 	// Load previous record upon document load.
 	$( document ).ready(function() {
 		set_all_birds();
+		M.AutoInit();
+    	var DateField = MaterialDateTimePicker.create($('#sighting_time'));
+
 	});
 
 
@@ -259,11 +261,6 @@
 		post_bird();
 	});
 
-	//initialise materialize modals
-	document.addEventListener('DOMContentLoaded', function() {
-		var elems = document.querySelectorAll('.modal');
-		var instances = M.Modal.init(elems, []);
-	});
 
 	function show_dialog(id,sn,cn,st,loc) {
 		// set modal labels
