--- a/www/index.html
+++ b/www/index.html
@@ -99,7 +99,7 @@
 	<div class="modal-content">
 		<div class="row" style="margin-bottom: 0px;">
 			<div class="col s5">
-				<img id="open-bird-img" style ="max-width:100%;height:250px;umargin:auto;" src="birdimages/16.jpg" />
+				<img id="open-bird-img" style ="max-width:100%;height:250px;umargin:auto;" src="" />
 			</div>
 			<div class="col s7">
 				<table>
